--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# Demo NestJS and federated schemas
+= Demo NestJS and federated schemas
 
 
 Problem: nest js does not generate federated directives.
@@ -6,7 +6,7 @@ Problem: nest js does not generate federated directives.
 
 Run the following command:
 
-- `npm run start:dev`
+- `+{npm run start:dev}+`
 - `npx ts-node generate-schema-with-docs.ts`
 - `npx ts-node generate-schema-with-tests`
 - `npx ts-node generate-schema-with-tests-introspection.ts`
