--- a/README.adoc
+++ b/README.adoc
@@ -6,10 +6,10 @@ Problem: nest js does not generate federated directives.
 
 Run the following command:
 
-- `+{npm run start:dev}+`
-- `npx ts-node generate-schema-with-docs.ts`
-- `npx ts-node generate-schema-with-tests`
-- `npx ts-node generate-schema-with-tests-introspection.ts`
+- `+npm run start:dev+`
+- `+npx ts-node generate-schema-with-docs.ts+`
+- `+npx ts-node generate-schema-with-tests+`
+- `+npx ts-node generate-schema-with-tests-introspection.ts+`
 
 
 Observe produced results are incomplete for the first 3 scripts and only contain 
